--- a/views/new.erb
+++ b/views/new.erb
@@ -1,7 +1,7 @@
-<div class="container">
-  <form action="/tasks" method="post">
+<div>
+  <form action="/posts/new" method="post">
     <input type="text" name="title" placeholder="タイトル"><br>
-      <input type="text" name="due_date" placeholder="締切"><br>
-      <input class="form-control col-lg-4" type="submit" value="登録">
+    <input type="textarea" name="description" placeholder="説明"><br>
+    <input type="submit" value="登録">
   </form>
 </div>
