--- a/views/new.erb
+++ b/views/new.erb
@@ -1,7 +1,9 @@
 <div>
-  <form action="/posts/new" method="post">
+  <form action="/posts/new" method="post" enctype="multipart/form-data">
     <input type="text" name="title" placeholder="タイトル"><br>
     <input type="textarea" name="description" placeholder="説明"><br>
+    image: <input type="file" name="image_file"><br>
+    music: <input type="file" name="music_file"><br>
     <input type="submit" value="登録">
   </form>
 </div>
